<resources>
    <string name="app_name">DemoApplication</string>
    <string name="hello">你好</string>
    <string name="user_greeting">打个招呼</string>
    <string name="MainInput">Input</string>
    <string name="MainSend">Send</string>
    <string name="SecondActivity">Second Activity</string>
    <string name="SecondReturn">Return</string>
    <string name="MainGoLayout">GoLayout</string>
    <string name="MainInputHint">hint</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_blank_fragment">change</string>
    <string name="FragmentButton">Fragment, return</string>
    <string name="FragmentChangeButton">Change</string>
    <string name="FragmentInterfaceTitle1">title1</string>
    <string name="FragmentInterfaceTitle2">title2</string>
    <string name="FragmentInterfaceTitle3">title3</string>
    <string name="FragmentInterfaceTitle4">title4</string>
    <string name="FragmentInterfaceTitle5">title5</string>
    <string name="FragmentInterfaceTitle6">title6</string>
    <string name="baidu">http://www.baidu.com</string>
</resources>