<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".InterfaceFragment">

    <TextView
            android:id="@+id/interfaceFragmentTxtView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FragmentInterfaceTitle1" />

    <TextView
            android:id="@+id/interfaceFragmentTxtView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FragmentInterfaceTitle2" />

    <TextView
            android:id="@+id/interfaceFragmentTxtView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FragmentInterfaceTitle3" />

    <TextView
            android:id="@+id/interfaceFragmentTxtView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FragmentInterfaceTitle4" />

    <TextView
            android:id="@+id/interfaceFragmentTxtView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FragmentInterfaceTitle5" />

</LinearLayout>