<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ButtonFragment">

    <TextView
            android:id="@+id/fragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment" />

    <Button
            android:id="@+id/fragmentChangeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FragmentChangeButton" />

    <Button
            android:id="@+id/fragmentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FragmentButton" />

</LinearLayout>